--- a/base/requirements.txt
+++ b/base/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.8
 cookiecutter==2.6.0
 Django==5.1.5
 django-browser-reload==1.17.0
+django-environ==0.12.0
 django-tailwind==3.8.0
 idna==3.10
 Jinja2==3.1.5
