--- a/base/requirements.txt
+++ b/base/requirements.txt
@@ -2,15 +2,19 @@ arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
 black==25.1.0
+Brotli==1.1.0
 certifi==2025.1.31
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 cookiecutter==2.6.0
+dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-environ==0.12.0
 django-tailwind==3.8.0
+gunicorn==23.0.0
+h11==0.14.0
 idna==3.10
 Jinja2==3.1.5
 markdown-it-py==3.0.0
@@ -20,6 +24,7 @@ mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+psycopg2-binary==2.9.10
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
@@ -31,4 +36,7 @@ six==1.17.0
 sqlparse==0.5.3
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.0
 urllib3==2.3.0
+uvicorn==0.34.0
+whitenoise==6.9.0
