--- a/base/render.yaml
+++ b/base/render.yaml
@@ -10,7 +10,7 @@ services:
     name: mysite
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python manage.py runserver"
+    startCommand: "python -m gunicorn base.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
