--- a/base/render.yaml
+++ b/base/render.yaml
@@ -10,7 +10,7 @@ services:
     name: mysite
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn base.asgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "gunicorn base.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -18,5 +18,7 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
+      - key: DEBUG
+        value: "False"
       - key: WEB_CONCURRENCY
-        value: 4
+        value: "4"
