--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,26 @@
 databases:
-  - name: mysitedb
+  - name: saraWeb
     plan: free
-    databaseName: mysite
-    user: mysite
+    databaseName: saraWeb_db
+    user: saraelallouche
 
 services:
   - type: web
     plan: free
-    name: mysite
+    name: saraWeb
     runtime: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn base.wsgi:application"
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: mysitedb
-          property: connectionString
-      - key: SECRET_KEY
+      - key: DJANGO_ALLOWED_HOSTS
+        value: "*"
+      - key: DJANGO_SECRET_KEY
         generateValue: true
-      - key: DEBUG
+      - key: DJANGO_DEBUG
         value: "False"
-      - key: WEB_CONCURRENCY
-        value: "4"
+      - key: DATABASE_URL
+        value: postgres://user:password@localhost:5432/mydatabase
+      - key: NPM_BIN_PATH
+        value: "/opt/homebrew/bin/npm"
+      - key: SECURE_SSL_REDIRECT
+        value: False
