rename directory settings

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ __pycache__/
 
 # VS Code
 .vscode/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
