--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -8,8 +8,8 @@ option_settings:
 
 container_commands:
   01_migrate:
-    command: "python3 manage.py migrate"
+    command: "python manage.py migrate"
     leader_only: true
   02_collectstatic:
-    command: "python3 manage.py collectstatic --noinput"
+    command: "python manage.py collectstatic --noinput"
     leader_only: true
