--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,67 @@
 arrow==1.3.0
 asgiref==3.8.1
+awscli==1.42.1
+awsebcli==3.25
+bcrypt==4.3.0
 binaryornot==0.4.4
 black==25.1.0
+blessed==1.21.0
+botocore==1.40.1
 Brotli==1.1.0
+cement==2.10.14
 certifi==2025.1.31
+cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 cookiecutter==2.6.0
+cryptography==45.0.5
+decorator==5.2.1
+Deprecated==1.2.18
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-environ==0.12.0
 django-tailwind==3.8.0
+docutils==0.19
+fabric==3.2.2
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
+invoke==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mypy-extensions==1.0.0
 packaging==24.2
+paramiko==4.0.0
 pathspec==0.12.1
 platformdirs==4.3.6
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 Pygments==2.19.1
+PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-slugify==8.0.4
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
+rsa==4.7.2
+s3transfer==0.13.1
+semantic-version==2.10.0
 six==1.17.0
 sqlparse==0.5.3
+termcolor==2.5.0
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.13.0
-urllib3==2.3.0
+urllib3==1.26.20
 uvicorn==0.34.0
+wcwidth==0.2.13
 whitenoise==6.9.0
+wrapt==1.17.2
