--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,5 @@
+# .ebextensions/django.config
+
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config.wsgi:application
@@ -6,10 +8,10 @@ option_settings:
     DJANGO_SETTINGS_MODULE: config.settings
     PYTHONPATH: /var/app/current
 
-container_commands:
-  01_migrate:
-    command: "python manage.py migrate"
-    leader_only: true
-  02_collectstatic:
-    command: "python manage.py collectstatic --noinput"
-    leader_only: true
+# container_commands:
+#   01_migrate:
+#     command: "python manage.py migrate"
+#     leader_only: true
+#   02_collectstatic:
+#     command: "python manage.py collectstatic --noinput"
+#     leader_only: true
