--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,8 @@ packaging==24.2
 paramiko==4.0.0
 pathspec==0.12.1
 platformdirs==4.3.6
+psycopg==3.2.9
+psycopg-binary==3.2.9
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
