static to staticfiles

--- a/.ebextensions/static.config
+++ b/.ebextensions/static.config
@@ -4,7 +4,7 @@ files:
     owner: root
     group: root
     content: |
-      Alias /static/ /var/app/current/static/
-      <Directory /var/app/current/static>
+      Alias /static/ /var/app/current/staticfiles/
+      <Directory /var/app/current/staticfiles>
           Require all granted
       </Directory>
