--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,3 @@
-# .ebextensions/django.config
-
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: config.wsgi:application
@@ -8,10 +6,32 @@ option_settings:
     DJANGO_SETTINGS_MODULE: config.settings
     PYTHONPATH: /var/app/current
 
+# Commandes exécutées après déploiement
 container_commands:
-  01_migrate:
-     command: "python manage.py migrate"
-     leader_only: true
-  02_collectstatic:
+  00_create_static_dir:
+    command: "mkdir -p /var/app/current/staticfiles"
+    leader_only: true
+
+  01_tailwind_build:
+    command: "python manage.py tailwind build || echo 'tailwind failed'"
+    leader_only: true
+
+  02_migrate:
+    command: "python manage.py migrate"
+    leader_only: true
+
+  03_collectstatic:
     command: "python manage.py collectstatic --noinput"
     leader_only: true
+
+# Configuration pour que nginx serve les fichiers statiques
+files:
+  "/etc/httpd/conf.d/static.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      Alias /static/ /var/app/current/staticfiles/
+      <Directory /var/app/current/staticfiles>
+          Require all granted
+      </Directory>
