change container_commands and delete files

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -8,30 +8,15 @@ option_settings:
 
 # Commandes exécutées après déploiement
 container_commands:
-  00_create_static_dir:
-    command: "mkdir -p /var/app/current/staticfiles"
-    leader_only: true
-
   01_tailwind_build:
-    command: "python manage.py tailwind build || echo 'tailwind failed'"
+    command: "source /var/app/venv/*/bin/activate && python manage.py tailwind build || echo 'tailwind failed'"
     leader_only: true
 
   02_migrate:
-    command: "python manage.py migrate"
+    command: "source /var/app/venv/*/bin/activate && python manage.py migrate"
     leader_only: true
 
   03_collectstatic:
-    command: "python manage.py collectstatic --noinput"
+    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
     leader_only: true
 
-# Configuration pour que nginx serve les fichiers statiques
-files:
-  "/etc/httpd/conf.d/static.conf":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      Alias /static/ /var/app/current/staticfiles/
-      <Directory /var/app/current/staticfiles>
-          Require all granted
-      </Directory>
