--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -8,15 +8,13 @@ option_settings:
 
 # Commandes exécutées après déploiement
 container_commands:
-  01_tailwind_build:
-    command: "source /var/app/venv/*/bin/activate && python manage.py tailwind build || echo 'tailwind failed'"
+  00_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput --clear"
     leader_only: true
-
+  01_makemigrations:
+    command: "source /var/app/venv/*/bin/activate && python manage.py makemigrations"
+    leader_only: true
   02_migrate:
     command: "source /var/app/venv/*/bin/activate && python manage.py migrate"
-    leader_only: true
-
-  03_collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
     leader_only: true
 
