--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ bcrypt==4.3.0
 binaryornot==0.4.4
 black==25.1.0
 blessed==1.21.0
-botocore==1.40.1
+boto3==1.40.6
+botocore==1.40.6
 Brotli==1.1.0
 cement==2.10.14
 certifi==2025.1.31
@@ -23,6 +24,7 @@ dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
 django-environ==0.12.0
+django-storages==1.14.6
 django-tailwind==3.8.0
 docutils==0.19
 fabric==3.2.2
