--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Deprecated==1.2.18
 dj-database-url==2.3.0
 Django==5.1.5
 django-browser-reload==1.17.0
-django-ebhealthcheck==2.0.2
+django-elb-health-check-middleware==0.1.0
 django-environ==0.12.0
 django-storages==1.14.6
 django-tailwind==3.8.0
